# gradient-bang

./: .cursorignore  .dockerignore  .env.schema  .gitignore  .gitmodules  AGENTS.md  Agents.md  CHANGELOG.md  CLAUDE.md  Dockerfile  GRAPH_LAYOUT_OPTIMIZATION_GUIDE.md  README.md  TRADEMARKS.md  bot_player_tui.py  debug_admin_query.py  docker-compose.yml  env.bot.example  env.byoa.example  env.example  env.supabase.example  file-by-file-0921.md  file-by-file-0928.md  file-by-file.md  graph_layout.js  khk-notes.txt  layout_test_data.jsonl  local_map.html  local_map_claude.html  player_tui.py  pyproject.byoa.toml  pyproject.toml  pytest.ini  supabase-plan.md  test_event_query_debug.py  test_layout.js
.claude/: launch.json  settings.json
.github/workflows/: deploy-bot-eval.yml  deploy-bot.yml  deploy-functions.yml  deploy.yml  release.yml  test.yml
.test-world-data/: universe_structure.json
client/: .gitignore  README.md  env.example  hud-map-debug.html  index.html  map-demo.html  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.app.json  tsconfig.json  tsconfig.node.json  tsconfig.stories.json  turbo.json  vercel.json  vercel.ts  vite.config.ts
client/.ladle/: MessageSelect.tsx  components.tsx  config.mjs  global.css
client/app/: .env.schema  (+13 more)
deployment/: CLAUDE.md  Dockerfile.bot  Dockerfile.server  entry-server.sh  pcc-deploy-example.toml  pcc-deploy.example.toml
docs/: TESTING_COMBAT_TICK_WORKER.md  TEST_FIX_SESSION_SUMMARY.md  TEST_SKIP_ANALYSIS.md  TEST_WORK_PROGRESS.md  admin-endpoints-alternatives.md  app_topology.md  byoa-example.py  byoa-vercel.md  byoa.md  client_event_schema.md  client_state_object.ts  combat-debug-harness-spec.md  combat-eval-scenarios.md  combat-event-parity-spec.md  combat-events-catalog.md  combat-events-impl-plan.md  combat-events.md  combat-migration-phase-plan.md  combat-rtvi-event-flow.md  combat.md  combat_tick_cron_setup.md  course_plot_event_alignment.md  event-driven-api-design.md  event-driven-implementation-progress.md  event-query-admin-mode-investigation.md  event_catalog.md  garrison-fighter-cap-plan.md  get-cloud-api-keys.md  join-refactor-completed.md  join-refactor-plan.md  map_local_event_alignment.md  move-function-sanity-check.md  openai-realtime-phase1-plan.md  openai-realtime-semantic-vad-plan.md  plan-event-identity.md  polling-implementation-review.md  polling-implementation-test-results.md  polling-migration-plan.md  quest-system-spec.md  quickstart.md  (+23 more)
game-server/: __main__.py  character_knowledge.py  events.py  old-http-server.py  port_manager.py  sector.py  server.py  server_websocket.py  ships.py  trading.py
macos/: local_mac_transport.py
npc/: __init__.py  combat_interactive_tui.py  combat_session.py  combat_strategy.py  combat_utils.py  run_experimental_task.py  run_long_npc.py  run_npc.py  simple_tui.py  status_bars.py  status_subscription_demo.py  test_npc_local.py
pipecat/: bot.py  env.example  voice_task_manager.py
pipecat_server/: bot.py  voice_task_manager.py
planning-files/: GAME_EVENTS.md  GAME_MODELS.md  GRAPH_LAYOUT_OPTIMIZATION_GUIDE.md  NEXT-supabase-events-implementation.md  NEXT-supabase-migration-plan.md  SUPABASE-MIGRATION-UPDATED-claude.md  SUPABASE-MIGRATION-UPDATED-codex.md  admin-functions-universe-loader-plan.md  api-endpoints.md  async-and-client-side-game-tools.md  combat.md  firehose-and-tui.md  npc-plan.md  payload-comparison-fixes.md  payload-parity-plan.md  player-tui.md  rls-event-delivery-plan.md  sector-map-instructions.md  ships.md  supabase-events-rls-plan.md  supabase-migration-analysis.md  supabase-migration-claude-notes.md  supabase-migration-plan.md  supabase-schema-server-only.sql  supabase-setup-notes.md  test-coverage-verification.md  trading.md
quest-data/: garrison-intro.json  tutorial-1.json  tutorial-2.json  tutorial.json
schemas/: generated_events.py  server_events.schema.json
scripts/: bank_deposit.py  bank_withdraw.py  batch_payload_parity.py  build_event_types.py  byoa-manifest.txt  character_create.py  character_join.py  character_lookup.py  character_modify.py  ci_admin_smoke.py  compare_payloads.py  corporation_create.py  corporation_join.py  corporation_leave.py  corporation_lookup.py  corporation_roster.py  corporation_ship_purchase.py  double_run_payload_parity.py  event_query.py  generate_sector_names.py  load_universe_to_supabase.py  manual_cloud_test.py  old_universe-bang.py  openai_realtime_aiortc_smoke.py  payload_capture_runner.py  realtime_healthcheck.py  rebuild_leaderboard.py  replay_gemini_invocation.py  replay_gemini_service.py  reset-world.sh  reset_ports.py  run-integration-tests.sh  scene_gen.py  serve_local_map.py  setup-production-combat-tick.sh  spatial-universe-bang.py  supabase-reset-with-cron.sh  sync-eval-seeds.sh  test_cloud_realtime_debug.py  test_cloud_realtime_minimal.py  (+4 more)
supabase/: config.toml  seed.sql
systemd/: gradient-bang-bot.service  gradient-bang-client.service  gradient-bang-edge-functions.service  gradient-bang-supabase.service  gradient-bang-tailscale.service  gradient-bang.target
tests/: config.py  conftest.py  test_async_game_client.py  test_character_endpoints.py  test_combat_manager.py  test_combat_scenarios_comprehensive.py  test_combat_session.py  test_combat_tick_worker_isolated.py  test_combat_trade_events_integration.py  test_event_summaries.py  test_experimental_pipecat_task_agent.py  test_leaderboard_snapshot.py  test_local_map_endpoints.py  test_plot_course.py  test_server_rpc.py  test_server_websocket.py  test_simple_tui_runner.py  test_utils.py  test_utils_integration.py  test_websocket_messaging.py  test_world_persistence.py
tools/: character_viewer.py  firehose_viewer.py  world_viewer.html
tui/: __init__.py  bot_player_app.py  player_app.py  task_manager.py
utils/: api_client.py  base_llm_agent.py  chat_agent.py  combat_tools.py  experimental_pipecat_agent.py  game_tools.py  legacy_ids.py  llm_interface.py  port_helpers.py  prompts.py  summary_formatters.py  supabase_admin.py  supabase_client.py  supabase_realtime.py  task_agent.py  tools_schema.py
(+1988 files in other folders)
