[project]
name = "gradient-bang"
version = "0.1.0"
description = "Game of the Millennium"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27.0", # Relax version
    "fastapi>=0.116.1",
    "python-dotenv>=1.1.1",
    "google-genai>=0.7.0",
    "uvicorn[standard]>=0.35.0",
    "rich>=13.0.0",
    "websockets>=13.1,<15.0", # Match pipecat-ai's requirement
    "textual>=6.1.0",
    "loguru>=0.7.0",
    "pipecat-ai[deepgram,speechmatics,openai,cartesia,webrtc,silero,local-smart-turn,rime,google]==0.0.90",
    "pipecat-ai-small-webrtc-prebuilt",
    "pyperclip>=1.11.0",
]

[dependency-groups]
dev = [
    "httpx>=0.27.0",  # Match main dependency
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
]

[tool.uv]
# Override specific sub-dependencies to fix compatibility issues
# Note: run all scripts/tests via `uv run …` to keep environments consistent.
override-dependencies = [
    "numba==0.61.2",  # Pin to version that supports Python 3.12
    "openai==1.99.5",  
]

[tool.pytest.ini_options]
markers = [
    "integration: marks integration tests that require the live game server",
]
