[project]
name = "gradient-bang"
version = "0.1.0"
description = "Game of the Millennium"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27.0", # Relax version
    "fastapi>=0.116.1",
    "python-dotenv>=1.1.1",
    "google-genai>=0.7.0",
    "uvicorn[standard]>=0.35.0",
    "rich>=13.0.0",
    "websockets>=13.1,<15.0", # Match pipecat-ai's requirement
    "textual>=6.1.0",
    "loguru>=0.7.0",
    "pipecat-ai[deepgram,speechmatics,openai,daily,cartesia,webrtc,silero,local-smart-turn,rime,google,runner]==0.0.92",
    "pipecat-ai-small-webrtc-prebuilt",
    "pyperclip>=1.11.0",
]

[dependency-groups]
dev = [
    "httpx>=0.27.0",  # Match main dependency
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-timeout>=2.3.1",  # Add timeout support
]

[tool.uv]
# Override specific sub-dependencies to fix compatibility issues
# Note: run all scripts/tests via `uv run …` to keep environments consistent.
override-dependencies = [
    "numba==0.61.2",  # Pin to version that supports Python 3.12
    "openai==1.99.5",  
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
# Exclude archived integration tests from default test runs
norecursedirs = ["integration-old", ".git", "__pycache__", "*.egg-info"]
markers = [
    "unit: Unit tests (fast, no server needed)",
    "integration: Integration tests (may need server)",
    "requires_server: Requires live server on port 8002",
    "stress: Stress tests (slow, concurrent operations) - skip by default",
]
# Timeout configuration (prevent hanging tests)
timeout = 30  # Max 30 seconds per test
# Event waiting timeouts (use asyncio.timeout() in tests):
#   - Integration tests: 10 seconds (real server, events)
#   - Unit tests: 5 seconds (fast, mocked operations)
#   - Combat tests: 20 seconds (combat rounds can take 15s)
